# Appointment-schedular-Agent

./: .gitignore  CLEANUP_SUMMARY.md  GIT_WORKFLOW.md
backend/: .dockerignore  ARCHITECTURE.md  Dockerfile  LLM_SETUP.md  README.md  REAL_BOOKING_SETUP.md  check_models.py  create_test_slots.py  debug_calendar_connection.py  force_refresh_token.py  list_all_models.py  main.py  package-lock.json  package.json  pyproject.toml  q&a_for_agent.md  requirements.txt  reset_calendar_connection.py  reset_google_auth.py  setup_env.py  test_api_key.py  test_calendar_access.py  test_calendar_integration.py  test_langchain.py  test_llm.py  test_simple_openai.py
backend/app/api/: deps.py
backend/app/core/: calendar_architecture.py  config.py  database.py  security.py  sync_config.py  timezone_utils.py
backend/app/models/: models.py
backend/app/routers/: __init__.py  auth.py  availability.py  bookings.py  dashboard.py  landing_page.py  public.py  public_booking.py  public_pages.py  public_scheduling.py  settings.py  web.py
backend/app/schemas/: calendar_schemas.py  schemas.py
backend/app/services/: advanced_ai_agent_service.py  ai_agent_service.py  appointment_examples.py  availability_service.py  booking_service.py  email_service.py  enhanced_booking_service.py  file_upload_service.py  gmail_service.py  google_calendar_service.py  intelligent_agent_service.py  knowledge_base_service.py  llm_calendar_service.py  llm_provider.py  notification_service.py  oauth_service.py  pending_connection_service.py  reschedule_service.py  token_refresh_service.py  user_service.py
backend/app/templates/: 404.html  500.html  _macros.html  _sidebar.html  agent_base.html  agent_chat.html  authenticated_base.html  availability.html  availability_response.html  availability_response_fragment.html  availability_slots.html  base.html  booking_details_modal.html  booking_form.html  booking_stats.html  bookings.html  bookings_list.html  cancel_confirmation.html  cancel_success.html  dashboard.html  dashboard_backup.html  dashboard_disabled.html  email_verified.html  index.html  (+13 more)
backend/migrations/: add_sync_fields.py
(+27 files in other folders)
